# sample-code

./: .gitignore  .gitmodules  README.md
c++/client-server/: CMakeLists.txt  README.md
c++/client-server/.devcontainer/: Dockerfile  devcontainer.json
c++/client-server/client/: main.cpp
c++/client-server/sample.xcodeproj/: project.pbxproj
c++/client-server/sample.xcodeproj/project.xcworkspace/xcshareddata/: sample.xcscmblueprint
c++/client-server/server/: main.cpp  prime.h
c++/client-server/src/: config.h  main-client.cpp  main-server.cpp  main-test.cpp  prime.cpp  special_functions_prime.h
c++/client-server/testRunner/: primeTest.cpp
c++/coordinate-conversion/: CMakeLists.txt  README.md  code_problem_data.csv  csv.cpp  csv.h
c++/coordinate-conversion/.devcontainer/: Dockerfile
c++/coordinate-conversion/src/: coord.cpp  coord.h  csv.cpp  main.cpp
c++/phone-number-db/: CMakeLists.txt  Makefile  README.md  database.cpp  database.h  phoneNumber.cpp  phoneNumber.h
c++/phone-number-db/.devcontainer/: Dockerfile
c++/phone-number-db/src/: database.cpp  database.h  database_test.cpp  phoneNumber.cpp  phoneNumber.h  phoneNumber_test.cpp  sample.cpp
c++/state-machines/: CMakeLists.txt  README.md
c++/state-machines/.devcontainer/: Dockerfile  devcontainer.json
c++/state-machines/src/: angleMachine.cpp  angleMachine.h  main.cpp  state.cpp  state.h  stateMachine.cpp  stateMachine.h  timeMachine.cpp  timeMachine.h
